# gimli

./: .coveralls.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  coverage  format  rustfmt.toml
.github/workflows/: rust.yml
benches/: bench.rs
ci/: script.sh
crates/case-fold-gen/: Cargo.toml
crates/case-fold-gen/src/: main.rs
crates/examples/: Cargo.toml
examples/: addr2line.rs  dwarf-validate.rs  dwarfdump.rs  simple.rs  simple_line.rs
fixtures/: libobjc.A.dylib.eh_frame
fixtures/self/: README  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: debug_abbrev.rs  debug_aranges.rs  debug_info.rs  debug_line.rs  debug_names.rs  eh_frame.rs  eh_frame_hdr.rs
releases/: friends.sh  release-announcement-template.md
src/: abbrev.rs  addr.rs  aranges.rs  arch.rs  case_fold.rs  case_fold_data.rs  cfi.rs  common.rs  constants.rs  endian_buf.rs  endian_reader.rs  endian_slice.rs  endianity.rs  gnu_debuglink.rs  leb128.rs  lib.rs  line.rs  loc.rs  loclists.rs  lookup.rs  op.rs  parser.rs  pubnames.rs  pubtypes.rs  ranges.rs  reader.rs  rnglists.rs  section.rs  str.rs  test_util.rs  types.rs  unit.rs  value.rs
src/read/: abbrev.rs  addr.rs  aranges.rs  cfi.rs  dwarf.rs  endian_reader.rs  endian_slice.rs  index.rs  lazy.rs  line.rs  lists.rs  loclists.rs  lookup.rs  macros.rs  mod.rs  names.rs  op.rs  pubnames.rs  pubtypes.rs  reader.rs  relocate.rs  rnglists.rs  str.rs  unit.rs  util.rs  value.rs
src/write/: abbrev.rs  cfi.rs  dwarf.rs  endian_vec.rs  frame.rs  line.rs  loc.rs  mod.rs  op.rs  range.rs  relocate.rs  section.rs  str.rs  unit.rs  writer.rs
tests/: convert_self.rs  entries_cursor.rs  lib.rs  parse_self.rs
