[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Philip Craig <philipjcraig@gmail.com>"]
categories = ["development-tools::debugging", "development-tools::profiling", "parser-implementations"]
description = "A library for reading and writing the DWARF debugging format."
documentation = "https://docs.rs/gimli"
keywords = ["DWARF", "debug", "ELF", "eh_frame"]
license = "Apache-2.0/MIT"
name = "gimli"
readme = "./README.md"
repository = "https://github.com/gimli-rs/gimli"
version = "0.20.0"
exclude = ["/ci/*", "/releases/*", "/.travis.yml"]
edition = "2018"

[badges]
travis-ci = { repository = "gimli-rs/gimli" }
coveralls = { repository = "gimli-rs/gimli" }

[dependencies]
arrayvec = { version = "0.5.0", default-features = false, optional = true }
byteorder = { version = "1.0", default-features = false }
fallible-iterator = { version = "0.2.0", default-features = false, optional = true }
indexmap = { version = "1.0.2", optional = true }
smallvec = { version = "1.1.0", default-features = false, optional = true }
stable_deref_trait = { version = "1.1.0", default-features = false, optional = true }

[dev-dependencies]
crossbeam = "0.7.1"
getopts = "0.2"
memmap = "0.7"
num_cpus = "1"
object = "0.18"
rayon = "1.0"
regex = "1"
test-assembler = "0.1.3"
typed-arena = "2"

[features]
read = ["arrayvec", "fallible-iterator", "smallvec", "stable_deref_trait"]
write = ["indexmap"]
std = ["fallible-iterator/std", "stable_deref_trait/std"]
default = ["read", "write", "std"]

[profile.bench]
debug = true
codegen-units = 1

[[example]]
name = "simple"
required-features = ["read"]

[[example]]
name = "simple_line"
required-features = ["read"]

[[example]]
name = "dwarfdump"
required-features = ["read", "std"]

[[example]]
name = "dwarf-validate"
required-features = ["read", "std"]
