[package]
name = "gimli"
version = "0.24.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Philip Craig <philipjcraig@gmail.com>"]
categories = ["development-tools::debugging", "development-tools::profiling", "parser-implementations"]
description = "A library for reading and writing the DWARF debugging format."
documentation = "https://docs.rs/gimli"
keywords = ["DWARF", "debug", "ELF", "eh_frame"]
license = "Apache-2.0/MIT"
readme = "./README.md"
repository = "https://github.com/gimli-rs/gimli"
exclude = ["/ci/*", "/releases/*", "/.travis.yml"]
edition = "2018"

[badges]
travis-ci = { repository = "gimli-rs/gimli" }
coveralls = { repository = "gimli-rs/gimli" }

[dependencies]
fallible-iterator = { version = "0.2.0", default-features = false, optional = true }
indexmap = { version = "1.0.2", optional = true }
stable_deref_trait = { version = "1.1.0", default-features = false, optional = true }

# Internal feature, only used when building as part of libstd, not part of the
# stable interface of this crate.
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
alloc = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-alloc' }
compiler_builtins = { version = '0.1.2', optional = true }

[dev-dependencies]
crossbeam = "0.8"
getopts = "0.2"
memmap = "0.7"
num_cpus = "1"
object = { version = "0.24", features = ["wasm"] }
rayon = "1.0"
regex = "1"
test-assembler = "0.1.3"
typed-arena = "2"

[features]
read = []
endian-reader = ["stable_deref_trait"]
write = ["indexmap"]
std = ["fallible-iterator/std", "stable_deref_trait/std"]
default = ["read", "write", "std", "fallible-iterator", "endian-reader"]

# Internal feature, only used when building as part of libstd, not part of the
# stable interface of this crate.
rustc-dep-of-std = ['core', 'alloc', 'compiler_builtins']

[profile.bench]
debug = true
codegen-units = 1

[[example]]
name = "simple"
required-features = ["read"]

[[example]]
name = "simple_line"
required-features = ["read"]

[[example]]
name = "dwarfdump"
required-features = ["read", "std"]

[[example]]
name = "dwarf-validate"
required-features = ["read", "std"]
