[package]
name = "gimli-examples"
version = "0.0.0"
edition = "2018"

[dependencies]
gimli = { path = "../..", default-features = false }
crossbeam = "0.8"
getopts = "0.2"
memmap2 = "0.9.4"
num_cpus = "1"
object = { version = "0.37.1", features = ["wasm", "write", "build"] }
rayon = "1.0"
regex = "1"
typed-arena = "2"

[features]
read = ["gimli/read"]
read-all = ["read", "std"]
write = ["gimli/write"]
std = ["gimli/std"]
default = ["read-all", "write"]

[[bin]]
name = "simple"
required-features = ["read", "std"]

[[bin]]
name = "simple_line"
required-features = ["read", "std"]

[[bin]]
name = "simple_write"
required-features = ["write", "std"]

[[bin]]
name = "simple_convert"
required-features = ["read", "write"]

[[bin]]
name = "convert"
required-features = ["read", "write", "std"]

[[bin]]
name = "dwarfdump"
required-features = ["read", "std"]

[[bin]]
name = "dwarf-validate"
required-features = ["read", "std"]

[[bin]]
name = "names"
required-features = ["read", "std"]
